Bug 98638 - gtk3 context menus sometimes don't work in Impress
Summary: gtk3 context menus sometimes don't work in Impress
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: All All
: medium major
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-13 21:11 UTC by Maxim Monastirsky
Modified: 2016-10-25 19:08 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Maxim Monastirsky 2016-03-13 21:11:35 UTC
1. Start Impress with gtk3 vclplug.
2. Right click on the slide.
3. Nothing happens.
Comment 1 Caolán McNamara 2016-03-14 11:22:14 UTC
works fine for me as far as I can see every time. How about right clicking on the "gray" area of the main panel, the bit outside the slide. Does that always work (asking because that's a far "simpler" case where there's less thing that might be trying to launch a menu)
Comment 2 Maxim Monastirsky 2016-03-14 11:35:55 UTC
(In reply to Caolán McNamara from comment #1)
> How about right clicking
> on the "gray" area of the main panel, the bit outside the slide.
No difference.

Looking at the terminal I have those each time it fails:

(soffice:12873): GLib-GObject-CRITICAL **: g_object_set_data: assertion 'G_IS_OBJECT (object)' failed
warn:vcl:12873:1:vcl/source/window/mouse.cxx:472: Window::ReleaseMouse(): window doesn't have the mouse capture

And when closing LO:

warn:legacy.osl:12562:1:vcl/source/window/window.cxx:327: Window ( 19SfxFrameWindow_Impl()) with live SystemWindows destroyed:  18MenuFloatingWindow() 18MenuFloatingWindow() 18MenuFloatingWindow()
Window ( 19SfxFrameWindow_Impl()) with live SystemWindows destroyed:  18MenuFloatingWindow() 18MenuFloatingWindow() 18MenuFloatingWindow()

I'm with Fedora 23 if that matters.
Comment 3 Commit Notification 2016-03-14 12:56:06 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0ee0e8010f986b67d696111ff4ea269ccf904aba

Resolves: tdf#98638 sometimes menu grab doesn't take

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2016-03-14 12:57:00 UTC
flipped from f24 to f23 and could reproduce it then. Seems to be a conflict with an earlier grab with a later timestamp.
Comment 5 Maxim Monastirsky 2016-03-14 21:25:02 UTC
Seems to work fine now. Thanks!