Resolves: tdf#98638 sometimes menu grab doesn't take

due to older timestamp vs earlier grab. Which suggests we should probably use
GDK_CURRENT_TIME everywhere or (probably better) use gtk_get_current_event_time
everywhere

Change-Id: Ie04ab254b9fea423143cc9a129d2eecb683ed300